--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -187,6 +187,9 @@
 	},
 	"event": "Event",
 	"event_plural": "Events",
+	"events": {
+		"widget_title": "Events generated in the last hour"
+	},
 	"failing": "Failing!",
 	"filevault": {
 		"users": "FileVault Enabled users",
