CoreLocation Module Squashed Commit

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -107,6 +107,7 @@
 			"ds": "Directory Services",
 			"fv_escrow": "Filevault Escrow",
 			"inventory_items": "Inventory Items",
+			"location": "Location",
 			"munki": "Managed Software",
 			"network": "Network Interfaces",
 			"power": "Power",
@@ -231,6 +232,17 @@
 		"computername": "Name",
 		"hardware": {
 			"description": "Description"
+		},
+	"location": {
+		"address": "Address",
+		"altitude": "Altitude",
+		"currentstatus": "Current Status",
+		"ls_enabled": "Location Services Enabled",
+		"lastrun": "Last Run",
+		"latitude": "Latitude",
+		"latitudeaccuracy": "Latitude Accuracy",
+		"longitude": "Longitude",
+		"longitudeaccuracy": "Longitude Accuracy"
 		},
 		"loading": "Loading data from server",
 		"munki": {
