--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -233,17 +233,6 @@
 		"hardware": {
 			"description": "Description"
 		},
-	"location": {
-		"address": "Address",
-		"altitude": "Altitude",
-		"currentstatus": "Current Status",
-		"ls_enabled": "Location Services Enabled",
-		"lastrun": "Last Run",
-		"latitude": "Latitude",
-		"latitudeaccuracy": "Latitude Accuracy",
-		"longitude": "Longitude",
-		"longitudeaccuracy": "Longitude Accuracy"
-		},
 		"loading": "Loading data from server",
 		"munki": {
 			"latest_run": "Latest Run",
@@ -264,6 +253,18 @@
 			"title": "Timemachine Report"
 		},
 		"username": "Username"
+	},
+	"location": {
+		"address": "Address",
+		"altitude": "Altitude",
+		"coordinates": "Coordinates",
+		"currentstatus": "Current Status",
+		"ls_enabled": "Location Services Enabled",
+		"lastrun": "Last Run",
+		"latitude": "Latitude",
+		"latitudeaccuracy": "Latitude Accuracy",
+		"longitude": "Longitude",
+		"longitudeaccuracy": "Longitude Accuracy"
 	},
 	"machine": {
 		"hardware_widget_title": "Hardware model breakdown"
