Add location listing

--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -296,6 +296,7 @@
 			"displays": "Displays",
 			"hardware": "Hardware",
 			"inventory": "Inventar",
+			"location": "Location",
 			"munki": "Munki",
 			"network": "Netzwerk",
 			"power": "Strom",
