--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -312,6 +312,7 @@
 			"displays": "Displays",
 			"hardware": "Hardware",
 			"inventory": "Inventory",
+			"location": "Location",
 			"munki": "Munki",
 			"network": "Network",
 			"power": "Power",
