--- a/assets/locales/nl.json
+++ b/assets/locales/nl.json
@@ -293,6 +293,7 @@
       "displays": "Beeldschermen",
       "hardware": "Hardware",
       "inventory": "Inventaris",
+      "location": "Location",
       "munki": "Munki",
       "network": "Netwerk",
       "power": "Power",
