--- a/assets/locales/fr.json
+++ b/assets/locales/fr.json
@@ -296,6 +296,7 @@
       "displays": "Moniteurs",
       "hardware": "Materiel",
       "inventory": "Inventaire",
+      "location": "Location",
       "munki": "Munki",
       "network": "Réseau",
       "power": "Alimentation",
