--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -105,6 +105,7 @@
 			"certificates": "Certificates",
 			"displays": "Displays",
 			"ds": "Directory Services",
+            "gsx": "GSX",
 			"fv_escrow": "Filevault Escrow",
 			"inventory_items": "Inventory Items",
 			"munki": "Managed Software",
@@ -115,7 +116,7 @@
 			"serverstats": "Server Statistics",
 			"summary": "Summary",
 			"third_party_software": "Third Party Software",
-			"timemachine": "Timemachine"
+			"timemachine": "Time Machine"
 		},
 		"installed_apple_software": "Installed Apple Software",
 		"installed_third_party_software": "Installed Third Party Software",
@@ -202,6 +203,27 @@
 	},
 	"free_disk_space": "Free Disk Space",
 	"free_disk_space_less_than": "Free Disk Space < __gb__GB",
+    "gsx": {
+        "configdesc": "Configuration Description",
+        "contracttype": "Contract Type",
+        "country": "Country of Purchase",
+        "coverage": {
+            "conend": "Contract Coverage End Date",
+            "constart": "Contract Coverage Start Date",
+			"start": "Coverage Start Date",
+			"end": "Coverage End Date"
+		},
+        "estpurchasedate": "Estimated Purchase Date",
+        "laborcovered": "Labor Covered",
+        "loaner": "Loaner",
+        "obsolete": "Obsolete",
+        "partscovered": "Parts Covered",
+        "sla": "Warranty SLA",
+        "vintage": "Vintage",
+        "warrantystatus": "Warranty Status",
+        "warrantydays": "Warranty Days Remaining",
+        "recheck": "Recheck Warranty Status"
+	},
 	"hardware": {
 		"hardware": "Hardware",
 		"uuid": "Hardware UUID"
@@ -249,7 +271,7 @@
 			"last_failure": "Last failed backup",
 			"last_failure_msg": "Message",
 			"last_success": "Last successful backup",
-			"title": "Timemachine Report"
+			"title": "Time Machine Report"
 		},
 		"username": "Username"
 	},
@@ -294,7 +316,7 @@
 			"bluetooth": "Bluetooth",
 			"clients": "Clients",
 			"certificate": "Certificates",
-			"directoryservice": "Directoryservice",
+			"directoryservice": "Directory Service",
 			"disk": "Disk",
 			"displays": "Displays",
 			"hardware": "Hardware",
@@ -305,7 +327,7 @@
 			"printers": "Printers",
 			"profile": "Profiles",
 			"security": "Security",
-			"timemachine": "Timemachine",
+			"timemachine": "Time Machine",
 			"warranty": "Warranty"
 		},
 		"main": {
