--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -261,10 +261,12 @@
 		"currentstatus": "Current Status",
 		"ls_enabled": "Location Services Enabled",
 		"lastrun": "Last Run",
+		"lastlocationrun": "Last Location Run",
 		"latitude": "Latitude",
 		"latitudeaccuracy": "Latitude Accuracy",
 		"longitude": "Longitude",
-		"longitudeaccuracy": "Longitude Accuracy"
+		"longitudeaccuracy": "Longitude Accuracy",
+		"stalelocation": "Stale Location"
 	},
 	"machine": {
 		"hardware_widget_title": "Hardware model breakdown"
