add wifi widgets to network report; add wifi listing

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -359,7 +359,8 @@
 			"profile": "Profiles",
 			"security": "Security",
 			"timemachine": "Time Machine",
-			"warranty": "Warranty"
+			"warranty": "Warranty",
+			"wifi": "WiFi"
 		},
 		"main": {
 		  "dashboard": "Dashboard",
