--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -565,6 +565,8 @@
 	},
     "wifi": {
         "apmode": "Access Point Mode",
+        "bssid": "BSSID",
+        "channel": "Channel",
         "extrssi": "External RSSI",
         "lasttrx": "Last Transmit Rate (Mbps)",
         "maxtrx": "Maximum Transmit Rate (Mbps)",
@@ -573,6 +575,7 @@
         "nonetworks": "No Networks",
         "rssilevel": "RSSI Level",
         "state": "WiFi State",
+        "ssid": "SSID",
         "xauthtype": "802.11X Authentication Type",
         "wifiauthtype": "WiFi Authentication Type",
         "wifiinfo": "WiFi Information"
