add gsx to listing drop down

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -337,6 +337,7 @@
 			"directoryservice": "Directory Service",
 			"disk": "Disk",
 			"displays": "Displays",
+			"gsx": "GSX",
 			"hardware": "Hardware",
 			"inventory": "Inventory",
 			"location": "Location",
